[gd_scene load_steps=34 format=3 uid="uid://dg2oggd8siqas"]

[ext_resource type="Texture2D" uid="uid://i5tu7lxoymwj" path="res://Scenes/PlayerArea/Images/GullyAtlas.png" id="1_01hw1"]
[ext_resource type="Script" uid="uid://dhduiwne4i2nh" path="res://HowToPlay/how_to_play.gd" id="1_3cmws"]
[ext_resource type="Texture2D" uid="uid://c1qu6wdte11mh" path="res://Scenes/EnemyArea/Images/FrankenAtlas.png" id="2_3cmws"]
[ext_resource type="Texture2D" uid="uid://ds2kxvs3chgyx" path="res://Scenes/EnemyArea/Images/AudienceAtlas.png" id="3_15vtu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3cmws"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_15vtu"]
atlas = ExtResource("1_01hw1")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_3cmws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cmws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15vtu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1qq82"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1qj3"]
atlas = ExtResource("1_01hw1")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_shjhj"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_15vtu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qq82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1qj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shjhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1qj3")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8num0"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_eol87"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_osfdy"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_1qq82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8num0")
}],
"loop": false,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eol87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osfdy")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhejb"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1k04"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff0q4"]
atlas = ExtResource("1_01hw1")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_suedn"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_01hw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhejb")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1k04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff0q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suedn")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnkr"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_stv2l"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5kx2"]
atlas = ExtResource("2_3cmws")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_d1qj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnkr")
}],
"loop": false,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stv2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5kx2")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ql73e"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2yno"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_r740e"]
atlas = ExtResource("1_01hw1")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp6bc"]
atlas = ExtResource("1_01hw1")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_shjhj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql73e")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2yno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r740e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp6bc")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vi6ko"]
atlas = ExtResource("3_15vtu")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfkiw"]
atlas = ExtResource("3_15vtu")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx6o1"]
atlas = ExtResource("3_15vtu")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhejb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi6ko")
}],
"loop": false,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfkiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx6o1")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[node name="HowToPlay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cmws")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0.0978625, 0.182598, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 66
theme_override_constants/margin_top = 33
theme_override_constants/margin_right = 66
theme_override_constants/margin_bottom = 66

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/normal_font_size = 66
text = "How To Play"
horizontal_alignment = 1

[node name="Step1Container" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Step1Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Step1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 50
text = "1. Play for your fans"
horizontal_alignment = 1

[node name="Step2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 33
text = "(by pressing Left Trigger
or Left Arrow)"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Step1Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerStep1Animation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Step1Container/MarginContainer"]
unique_name_in_owner = true
z_index = 1
texture_filter = 4
position = Vector2(164.667, 63)
scale = Vector2(0.166, 0.166)
sprite_frames = SubResource("SpriteFrames_3cmws")

[node name="EnemyStep1Sprite" type="Sprite2D" parent="MarginContainer/VBoxContainer/Step1Container/MarginContainer"]
texture_filter = 4
position = Vector2(271.333, 71)
scale = Vector2(0.166, 0.166)
texture = ExtResource("3_15vtu")
hframes = 2
vframes = 2
frame = 1

[node name="Step2Container" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Step2Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Step1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 50
text = "2. Hit anyone else"
horizontal_alignment = 1

[node name="Step2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 33
text = "(by pressing Right Trigger 
or Right Arrow)"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Step2Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerStep2Animation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Step2Container/MarginContainer"]
unique_name_in_owner = true
z_index = 1
texture_filter = 4
position = Vector2(383, 52.333)
scale = Vector2(0.166, 0.166)
sprite_frames = SubResource("SpriteFrames_15vtu")
animation = &"hit"

[node name="EnemyStep2Animation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/Step2Container/MarginContainer"]
unique_name_in_owner = true
texture_filter = 4
position = Vector2(506.333, 72.667)
scale = Vector2(0.166, 0.166)
sprite_frames = SubResource("SpriteFrames_1qq82")
animation = &"hit"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="BackButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../NextButtonContainer/NextButton")
focus_neighbor_top = NodePath("../../NextButtonContainer/NextButton")
focus_neighbor_right = NodePath("../../NextButtonContainer/NextButton")
focus_neighbor_bottom = NodePath("../../NextButtonContainer/NextButton")
focus_next = NodePath("../../NextButtonContainer/NextButton")
focus_previous = NodePath("../../NextButtonContainer/NextButton")
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="PlayerBackAnimation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer"]
unique_name_in_owner = true
z_index = 1
texture_filter = 4
position = Vector2(466, 23.667)
scale = Vector2(0.084, 0.084)
sprite_frames = SubResource("SpriteFrames_01hw1")
animation = &"hit"

[node name="EnemyBackAnimation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer"]
unique_name_in_owner = true
texture_filter = 4
position = Vector2(523, 33.333)
scale = Vector2(0.084, 0.084)
sprite_frames = SubResource("SpriteFrames_d1qj3")
animation = &"hit"

[node name="NextButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../BackButtonContainer/BackButton")
focus_neighbor_top = NodePath("../../BackButtonContainer/BackButton")
focus_neighbor_right = NodePath("../../BackButtonContainer/BackButton")
focus_neighbor_bottom = NodePath("../../BackButtonContainer/BackButton")
focus_next = NodePath("../../BackButtonContainer/BackButton")
focus_previous = NodePath("../../BackButtonContainer/BackButton")
theme_override_font_sizes/font_size = 50
text = "Next
"

[node name="PlayerNextAnimation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer"]
unique_name_in_owner = true
z_index = 1
texture_filter = 4
position = Vector2(476.333, 34.333)
scale = Vector2(0.084, 0.084)
sprite_frames = SubResource("SpriteFrames_shjhj")

[node name="EnemyNextAnimation" type="AnimatedSprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer"]
unique_name_in_owner = true
texture_filter = 4
position = Vector2(536.333, 28.167)
scale = Vector2(0.084, 0.084)
sprite_frames = SubResource("SpriteFrames_bhejb")
animation = &"hit"

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer/BackButton" to="." method="_on_back_button_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer/BackButton" to="." method="_on_back_button_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer/NextButton" to="." method="_on_next_button_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer/NextButton" to="." method="_on_next_button_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
